--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,9 @@ body {
 .site-nav {
     display: flex;
 }
+.nav-item {
+
+}
 .nav-item:nth-child(n+2) {
     margin-left: 50px;
 }
@@ -112,6 +115,17 @@ body {
 .current {
     color: var(--accent-color);
     text-decoration: none;
+    position: relative;
+}
+.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background: var(--accent-color);
+    border-radius: 2px;
 }
 .contacts-nav {
     display: flex;
@@ -251,12 +265,34 @@ body {
     justify-content: center;
 }
 .about-img-link {
-    display: block;
+    display: flex;
+    justify-content: center;
+    position: relative;
 }
-
+.about-img-link::after{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+}
 .about-img-link:not(:last-child) {
     margin-right: 30px;
 }
+.about-text {
+    position: absolute;
+    z-index: 1;
+    bottom: 27px;
+
+    font-weight: 700;
+    line-height: 1.14;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--secondary-accent-color);
+}
+
 /* ----------------------------team ---------------------------------*/
 
 .team {
@@ -546,8 +582,45 @@ border-radius: 4px;
 .social-links-link-footer:focus {
     background-color: var(--accent-color);
 }
+/* ------------------------modal------------------------ */
+.dackdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:hsla(0, 0%, 0%, 0.2);
+}
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 
-/* .social-links-link-footer:hover .social-icon,
-.social-links-link-footer:focus .social-icon {
-    fill: var(--secondary-social-icon-fill)
-} */
+    min-width: 528px;
+    min-height: 581px;
+    padding: ;
+    background-color: var(--primary-bg-color);
+    border-radius: 4px;
+}
+.close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid hsla(0, 0%, 0%, 0.1);
+}
+.icon-close {
+
+
+}
