--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
     --primary-text-color:#212121;
     --secondary-text-color:#757575;
+    --white-text-color: #FFFFFF;
     --accent-color:#2196F3;
     --secondary-accent-color:#FFFFFF;
     --primary-bg-color: #FFFFFF;
@@ -107,6 +108,9 @@ body {
     text-decoration: none;
     padding-top: 32px;
     padding-bottom: 32px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav:hover,
 .nav:focus {
@@ -142,6 +146,10 @@ body {
     justify-content: center;
     padding-top: 32px;
     padding-bottom: 32px;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     font-weight: 500;
     line-height: 1.14;
@@ -360,6 +368,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition-property: background-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon {
     fill: var(--primary-social-icon-fill);
@@ -404,6 +415,9 @@ body {
     border: 1px solid var(--clients-icon-fill);
     border-radius: 4px;
     fill: var(--clients-icon-fill);
+    transition-property: fill, border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover ,
 .clients-link:focus {
@@ -438,12 +452,17 @@ body {
     line-height: 1.62;
     text-align:center;
     letter-spacing: 0.03em;
+
     background-color: var(--pf-btn-color) ;
     color: var(--primary-text-color);
     border-radius: 4px;
     border: none;
     display: block;
     padding: 6px 22px;
+
+    transition-property: background-color, color, box-shadow, border-radius ;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-btn:hover, 
 .portfolio-btn:focus {
@@ -456,13 +475,25 @@ border-radius: 4px;
     display: flex;
     flex-wrap: wrap;
 }
+.portfolio-card-link{
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-card-link:focus {
+    outline: 1px solid var(--secondary-accent-color);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .portfolio-item {
     margin-left: 0;
     margin-right: 30px;
     margin-bottom: 30px;
+    transition-property: outline, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover ,
-.portfolio-item:focus {
+.portfolio-item:hover  {
     outline: 1px solid var(--secondary-accent-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -497,6 +528,29 @@ border-radius: 4px;
     font-size: 16px;
     line-height: 1.88;
     color: var(--secondary-text-color);
+}
+.portfolio-card-link:hover .portfolio-overlay{
+    transform: translateY(0);
+}
+.portfolio-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    color: var(--white-text-color);
+    background-color: hsla(207, 90%, 54%, 0.9);
+
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------------------footer------------------------ */
@@ -574,6 +628,9 @@ border-radius: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition-property: background-color ;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon-footer {
     fill: var(--secondary-social-icon-fill);
@@ -621,6 +678,10 @@ border-radius: 4px;
     border: 1px solid hsla(0, 0%, 0%, 0.1);
 }
 .icon-close {
-
-
 }
+
+
+
+/* transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
