--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,7 @@ body {
     letter-spacing: 0.06em;
     background-color: var(--accent-color);
     color: var(--secondary-accent-color);
+
     min-width: 200px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: none;
@@ -211,6 +212,10 @@ body {
     margin: 30px auto 0 auto;
     display: block;
     padding: 10px 32px;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover,
 .btn:focus {
@@ -277,23 +282,21 @@ body {
     justify-content: center;
     position: relative;
 }
-.about-img-link::after{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    content: "";
-    width: 100%;
-    height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);
-}
+
 .about-img-link:not(:last-child) {
     margin-right: 30px;
 }
 .about-text {
     position: absolute;
-    z-index: 1;
-    bottom: 27px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: 700;
     line-height: 1.14;
     text-align: center;
@@ -365,15 +368,17 @@ body {
     height: 100%;
     border-radius: 50%;
     background-color: inherit;
+    color: var(--primary-social-icon-fill);
+
     display: flex;
     align-items: center;
     justify-content: center;
-    transition-property: background-color, fill;
+    transition-property: background-color, color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon {
-    fill: var(--primary-social-icon-fill);
+    fill: currentColor;
 }
 .social-links-link:hover ,
 .social-links-link:focus {
@@ -382,7 +387,7 @@ body {
 
 .social-links-link:hover .social-icon,
 .social-links-link:focus .social-icon {
-    fill: var(--secondary-social-icon-fill)
+    color: var(--secondary-social-icon-fill);
 }
 /* --------------------------clients------------------------- */
 .clients {
@@ -414,19 +419,18 @@ body {
     height: 92px;
     border: 1px solid var(--clients-icon-fill);
     border-radius: 4px;
-    fill: var(--clients-icon-fill);
-    transition-property: fill, border;
+    color: var(--clients-icon-fill);
+    transition-property: color , border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover ,
 .clients-link:focus {
-    fill: var(--clients-icon-fill-hf);
-    border: 1px solid var(--clients-icon-fill-hf);
+    color: var(--clients-icon-fill-hf);
+    border-color: var(--clients-icon-fill-hf);
 }
 .clients-icon {
-    display: block;
-    justify-content: center;
+    fill: currentColor;
 
 }
 /* ---------------------------------------portfolio ---------------------*/
@@ -460,16 +464,16 @@ body {
     display: block;
     padding: 6px 22px;
 
-    transition-property: background-color, color, box-shadow, border-radius ;
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: background-color, color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-btn:hover, 
 .portfolio-btn:focus {
 background-color:var(--accent-color);
 color: var(--secondary-accent-color);
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
+
 } 
 .portfolio {
     display: flex;
@@ -480,29 +484,23 @@ border-radius: 4px;
     position: relative;
     overflow: hidden;
 }
-
+.portfolio-card-link:hover,
 .portfolio-card-link:focus {
-    outline: 1px solid var(--secondary-accent-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-item {
     margin-left: 0;
     margin-right: 30px;
     margin-bottom: 30px;
-    transition-property: outline, box-shadow;
+    transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-item:hover  {
-    outline: 1px solid var(--secondary-accent-color);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-item:nth-child(3n+0){
     margin-right: 0px;
     margin-left: 0;
 }
-.portfolio-item:nth-last-child(-n + 3)
-{
+.portfolio-item:nth-last-child(-n + 3){
     margin-bottom: 0;
 }
 
@@ -514,7 +512,6 @@ border-radius: 4px;
     border: 1px solid #EEEEEE;
     border-top: none;
 }
-
 .portfolio-title {
     margin-bottom: 4px;
     font-weight: 700;
@@ -552,7 +549,6 @@ border-radius: 4px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 /* ------------------------footer------------------------ */
 .footer {
     background-color: var(--bg-accent-color);
@@ -576,32 +572,33 @@ border-radius: 4px;
 .contacts-footer {
     margin-top: 20px;
 } 
+
 .address {
     font-style: normal;
     font-weight: 400;
     line-height: 1.71;
     color: var(--secondary-accent-color);
     text-decoration: none;
+
+    transition-property: color , border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.address:nth-child(n+2) {
-    margin-top: 9px;
-}
+
 .address:hover,
 .address:focus {
     color: var(--accent-color);
-}
+} 
 .contacts {
+    display: flex;
+    margin-top: 9px;
     color: var(--secondary-text-color);
 }
-.contacts:hover ,
-.contacts:focus {
-    color: var(--accent-color);
-}
+
 .join {
     margin-top: 10px;
 }
 .join-text {
-
     font-weight: 700;
     line-height: 1.14;
     text-transform: uppercase;
@@ -651,6 +648,8 @@ border-radius: 4px;
 .is-hidden {
     opacity: 0;
     pointer-events: none;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
     position: absolute;
@@ -663,6 +662,9 @@ border-radius: 4px;
     padding: ;
     background-color: var(--primary-bg-color);
     border-radius: 4px;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-btn {
     position: absolute;
