--- a/css/styles.css
+++ b/css/styles.css
@@ -383,12 +383,13 @@ body {
 .social-links-link:hover ,
 .social-links-link:focus {
     background-color: var(--accent-color);
+    color: var(--primary-bg-color);
 }
 
-.social-links-link:hover .social-icon,
+/* .social-links-link:hover .social-icon,
 .social-links-link:focus .social-icon {
     color: var(--secondary-social-icon-fill);
-}
+} */
 /* --------------------------clients------------------------- */
 .clients {
     margin-top: 94px;
@@ -479,20 +480,13 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     display: flex;
     flex-wrap: wrap;
 }
-.portfolio-card-link{
-    display: block;
-    position: relative;
-    overflow: hidden;
-}
-.portfolio-card-link:hover,
-.portfolio-card-link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 .portfolio-item {
+    display: flex;
     margin-left: 0;
     margin-right: 30px;
     margin-bottom: 30px;
-    transition-property: box-shadow;
+    transition-property: box-shadow, transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -526,9 +520,13 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     line-height: 1.88;
     color: var(--secondary-text-color);
 }
-.portfolio-item:hover .portfolio-overlay{
-    transform: translateY(0);
+
+.thumb {
+    display: block;
+    position: relative;
+    overflow: hidden;
 }
+
 .portfolio-overlay{
     position: absolute;
     top: 0;
@@ -548,6 +546,14 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card-link:hover,
+.portfolio-card-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-item:hover .portfolio-overlay{
+    transform: translateY(0);
 }
 /* ------------------------footer------------------------ */
 .footer {
@@ -637,19 +643,23 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     background-color: var(--accent-color);
 }
 /* ------------------------modal------------------------ */
-.dackdrop {
+.backdrop {
     position: fixed;
+    opacity: 1;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color:hsla(0, 0%, 0%, 0.2);
+
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden {
     opacity: 0;
     pointer-events: none;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .modal {
     position: absolute;
@@ -678,6 +688,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     height: 30px;
     border-radius: 50%;
     border: 1px solid hsla(0, 0%, 0%, 0.1);
+    background-color: var(--secondary-accent-color);
 }
 .icon-close {
 }
