--- a/css/styles.css
+++ b/css/styles.css
@@ -486,7 +486,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     margin-left: 0;
     margin-right: 30px;
     margin-bottom: 30px;
-    transition-property: box-shadow, transform;
+    transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -552,7 +552,8 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 .portfolio-card-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.portfolio-item:hover .portfolio-overlay{
+.portfolio-card-link:focus .portfolio-overlay,
+.portfolio-card-link:hover .portfolio-overlay{
     transform: translateY(0);
 }
 /* ------------------------footer------------------------ */
